# shortkey

./: .gitignore  README.md  ShortKey.spec  build.bash  main.spec  pyproject.toml
.github/workflow/: publish.yml
.github/workflows/: python-publish.yml
src/: main.py
src/shortkey/: __init__.py  build_st.bash  commands.py  config.py  res_path.py  start.py  ui.py  util.py
src/shortkey/resources/: icon.icns
